--- a/KoreaLandMarksApp/LandMarks.plist
+++ b/KoreaLandMarksApp/LandMarks.plist
@@ -11,6 +11,12 @@
 			<string>서울특별시 종로구 세종로 사직로 161</string>
 			<key>Image</key>
 			<string>kyungBokGoong</string>
+			<key>Description</key>
+			<string>경복궁은 대한민국 서울 세종로에 있는 조선 왕조의 법궁이다. 1395년에 창건하였다. ‘경복’은 시경에 나오는 말로 왕과 그 자손, 온 백성들이 태평성대의 큰 복을 누리기를 축원한다는 의미다.</string>
+			<key>Latitude</key>
+			<string>37.5798355</string>
+			<key>Longitude</key>
+			<string>126.97668</string>
 		</dict>
 		<dict>
 			<key>Title</key>
@@ -19,6 +25,12 @@
 			<string>서울특별시 용산구 용산2가동 남산공원길 105</string>
 			<key>Image</key>
 			<string>namsanTower</string>
+			<key>Description</key>
+			<string>N서울타워는 대한민국 서울특별시 용산구 용산동 2가 남산 공원 정상 부근에 위치한 전파 송출 및 관광용 타워이다. 1969년에 착공하여 1975년 7월 30일 완공되었다. 높이는 236.7m, 해발 479.7m이다. 수도권의 지상파 방송사들이 이 타워를 이용하여 전파를 송출한다</string>
+			<key>Latitude</key>
+			<string>37.5512474</string>
+			<key>Longitude</key>
+			<string>126.9882642</string>
 		</dict>
 		<dict>
 			<key>Title</key>
@@ -27,6 +39,12 @@
 			<string>서울특별시 중구</string>
 			<key>Image</key>
 			<string>myeongDong</string>
+			<key>Description</key>
+			<string>명동은 대한민국 서울특별시 중구에 있는 번화가이자, 지역 이름이다. 명동1가와 명동2가를 합친 면적은 0.91 km²이다. 명동1·2가, 충무로1·2가, 을지로1·2가 등을 포함하는 지역이다.</string>
+			<key>Latitude</key>
+			<string>37.564477</string>
+			<key>Longitude</key>
+			<string>126.985084</string>
 		</dict>
 		<dict>
 			<key>Title</key>
@@ -35,6 +53,12 @@
 			<string>서울특별시 종로구 가회동 계동길 37</string>
 			<key>Image</key>
 			<string>bookChon</string>
+			<key>Description</key>
+			<string>북촌 한옥마을은 서울특별시 종로구 가회동, 삼청동 내의 위치한 한옥 마을이다. 지리상으로는 경복궁과 창덕궁, 종묘의 사이에 위치해 있다.</string>
+			<key>Latitude</key>
+			<string>37.579046</string>
+			<key>Longitude</key>
+			<string>126.9863882</string>
 		</dict>
 		<dict>
 			<key>Title</key>
@@ -43,6 +67,12 @@
 			<string>서울특별시 종로구 와룡동 율곡로 99</string>
 			<key>Image</key>
 			<string>changDuckGoong</string>
+			<key>Description</key>
+			<string>창덕궁은 대한민국 서울특별시에 있는 조선 시대 궁궐로 동쪽으로 창경궁과 맞닿아 있다. 경복궁의 동쪽에 있어서 조선 시대에는 창경궁과 더불어 동궐이라 불렀다.</string>
+			<key>Latitude</key>
+			<string>37.579439</string>
+			<key>Longitude</key>
+			<string>126.991045</string>
 		</dict>
 		<dict>
 			<key>Title</key>
@@ -51,6 +81,12 @@
 			<string>서울특별시 종로구 법정동</string>
 			<key>Image</key>
 			<string>insadong</string>
+			<key>Description</key>
+			<string>인사동은 대한민국 서울특별시 종로구에 있는 법정동이다. 행정동인 종로동 산하에 있으며, 인사동네거리를 지나 안국동 로터리로부터 종로2가의 탑골공원까지의 구역을 말한다. 주요 거리는 조선시대 형성된 길이 0.7km의, 너비 12m의 인사동길이 있다.</string>
+			<key>Latitude</key>
+			<string>37.574152</string>
+			<key>Longitude</key>
+			<string>126.984658</string>
 		</dict>
 	</array>
 </dict>
